docs: Azure VM セットアップ手順書に6〜8章を追記
6章（認証・シークレットの設定）: ライセンスキー設定、owlmanage.sh encryptによる
  パスワード暗号化、owl-env.sh主要設定項目一覧（HEAPサイズ目安表付き）、
  Azure Key Vault統合（Managed Identity割り当て・起動前スクリプト）を記載。
7章（SSL/HTTPS設定）: 自己署名証明書（keytool）とCA署名済み証明書（openssl）の
  2パターン、owl-env.shへのSSL設定追記、AKS/AROとの違い（VM自身がTLS終端）を記載。
8章（外部Metastore接続設定）: 疎通確認（nc/psql）、フルインストール時のDB初期作成SQL、
  owl.propertiesのAgent Only/フルインストール2パターン設定、sslmodeの値比較表、
  Managed Identityによるパスワードレス認証（オプション）を記載。

https://claude.ai/code/session_01NNyZU8nNuieemtsMtY8coh